kubernetes/apps/default/vert/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vert
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vert
      app.kubernetes.io/instance: vert
      app.kubernetes.io/controller: vert
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vert
        app.kubernetes.io/instance: vert
        app.kubernetes.io/controller: vert
    spec:
      containers:
        - name: app
          image: ghcr.io/vert-sh/vert:latest
          ports:
            - name: http
              containerPort: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe: &probe
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 5m
              memory: 10Mi
            limits:
              cpu: 10m
              memory: 50Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
