kubernetes/apps/default/vert/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vert
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: vert
    app.kubernetes.io/instance: vert
    app.kubernetes.io/controller: it-tools
